[gd_scene load_steps=6 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://FKLimb.tscn" type="PackedScene" id=2]
[ext_resource path="res://IKLimb.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 408.938, 301.572 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="FKLimb" parent="." instance=ExtResource( 2 )]
position = Vector2( 408.945, 588.904 )

[node name="Arm" parent="." instance=ExtResource( 3 )]
position = Vector2( 34.7766, 67.2912 )

[node name="HUD" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 816.78
margin_right = 816.78

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 408.404, 301.751 )
shape = SubResource( 1 )

[connection signal="body_clicked" from="." to="HUD" method="_on_body_bodypart_clicked"]
[connection signal="voidClick" from="." to="HUD" method="_on_voidClick"]
[connection signal="HUD_state" from="FKLimb" to="." method="_on_body_HUD_state"]
[connection signal="scale_changed" from="HUD" to="FKLimb" method="_on_HUD_scale_changed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
